Fix filters, fix table on mobile, add new popover

--- a/src/css/gw/_m-filter-results.scss
+++ b/src/css/gw/_m-filter-results.scss
@@ -97,6 +97,11 @@
     &__found {
       font-size:  1.4rem;
     }
+
+    .fa-checkbox-custom {
+      vertical-align: middle;
+      float: none;
+    }
   }
 
   &__link {
