--- a/src/css/gw/base/_common.scss
+++ b/src/css/gw/base/_common.scss
@@ -248,7 +248,7 @@ a[href^=mailto] {
 
 .overlay {
   z-index: -1;
-  @include position(fixed, 80px 0 0 0);
+  @include position(fixed, 0 0 0 0);
   background-color: #000000;
   opacity: 0.1;
 
